# neo4j-mcp

./: .gitignore  .mcp.json.example  AGENTS.md  AGENTS.md.example  README.md  pyproject.toml
docker/: Dockerfile  start.sh
src/neo4j_knowledge_mcp/: graph.py  server.py
