[project]
name = "neo4j-knowledge-mcp"
version = "0.1.0"
description = "MCP server for project knowledge graphs backed by Neo4j"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "neo4j>=5.0.0",
]

[project.scripts]
neo4j-knowledge-mcp = "neo4j_knowledge_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/neo4j_knowledge_mcp"]

[tool.ruff]
line-length = 100
